--- a/frontend/package.json
+++ b/frontend/package.json
@@ -11,6 +11,7 @@
   },
   "dependencies": {
     "@tailwindcss/vite": "^4.1.10",
+    "@types/string-hash": "^1.1.3",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.5",
     "lucide-react": "^0.525.0",
@@ -18,6 +19,7 @@
     "react-dom": "^19.1.0",
     "react-router": "^7.6.2",
     "react-router-dom": "^7.6.3",
+    "string-hash": "^1.1.3",
     "tailwindcss": "^4.1.10"
   },
   "devDependencies": {
@@ -33,5 +35,5 @@
     "typescript-eslint": "^8.30.1",
     "vite": "^6.3.5"
   },
-  "packageManager": "pnpm@10.12.1+sha512.f0dda8580f0ee9481c5c79a1d927b9164f2c478e90992ad268bbb2465a736984391d6333d2c327913578b2804af33474ca554ba29c04a8b13060a717675ae3ac"
+  "packageManager": "pnpm@10.14.0+sha512.ad27a79641b49c3e481a16a805baa71817a04bbe06a38d17e60e2eaee83f6a146c6a688125f5792e48dd5ba30e7da52a5cda4c3992b9ccf333f9ce223af84748"
 }
