feat: Implement JWT authentication and user context management
- Updated RecipeCard component to remove email dependency in bookmark toggle API call.
- Enhanced UserDataContext to load user information from the backend using JWT token stored in localStorage.
- Added Axios interceptors to attach JWT token to all bookmark API requests.
- Refactored bookmark API functions to remove email parameter and handle bookmarks based on recipe ID.
- Modified Login and SignUp components to handle JWT token storage and user context setting upon successful authentication.
- Introduced JWT utility functions for creating and decoding access tokens in the backend.

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -7,8 +7,11 @@ requires-python = ">=3.13"
 dependencies = [
     "bcrypt<4.1.0",
     "fastapi>=0.115.13",
+    "jwt>=1.4.0",
     "passlib[bcrypt]>=1.7.4",
     "pydantic[email]>=2.11.7",
+    "pydotenv>=0.0.7",
+    "python-jose[cryptography]>=3.5.0",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.34.3",
 ]
