Update: Refactor recipe components, API & migrate DB to Neon
- Updated RecipeCard to use single recipe object

- Modified RecipeDetails and RecipeGrid for new recipe structure

- Removed unused user settings from UserMenu

- Standardized tag names in Tags_Info

- Changed user data to use 'username' instead of 'name'

- Updated bookmark API to include user email

- Improved recipe types for clarity

- Added backend models for recipes, ingredients, instructions, tags & bookmarks with relationships

- Added services for recipe images

- Migrated all database operations from local SQLite to Neon using SQLAlchemy

- Adjusted routes, schemas & DB operations for Neon setup

--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -5,13 +5,16 @@ description = "Add your description here"
 readme = "README.md"
 requires-python = ">=3.13"
 dependencies = [
+    "asyncpg>=0.30.0",
     "bcrypt<4.1.0",
+    "dotenv>=0.9.9",
     "fastapi>=0.115.13",
     "jwt>=1.4.0",
     "passlib[bcrypt]>=1.7.4",
     "pydantic[email]>=2.11.7",
     "pydotenv>=0.0.7",
     "python-jose[cryptography]>=3.5.0",
+    "requests>=2.32.4",
     "sqlalchemy>=2.0.41",
     "uvicorn>=0.34.3",
 ]
