--- a/backend/pyproject.toml
+++ b/backend/pyproject.toml
@@ -9,6 +9,7 @@ dependencies = [
     "bcrypt<4.1.0",
     "dotenv>=0.9.9",
     "fastapi>=0.115.13",
+    "imagekitio>=4.1.0",
     "jwt>=1.4.0",
     "passlib[bcrypt]>=1.7.4",
     "pydantic[email]>=2.11.7",
