--- a/frontend/package.json
+++ b/frontend/package.json
@@ -14,6 +14,7 @@
     "@types/string-hash": "^1.1.3",
     "axios": "^1.11.0",
     "framer-motion": "^12.23.5",
+    "imagekitio-react": "^4.3.0",
     "lucide-react": "^0.525.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
